--- a/index.html
+++ b/index.html
@@ -1,253 +1,73 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
-
+<html  >
 <head>
-    <!-- Copyright © 2020 by www.x6k.com -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>小意诞生时长</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <style>
-        html,
-        body {
-            height: 100%;
-        }
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="renderer" content="webkit">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.02,user-scalable=no" />
+    <link rel="icon" href="/favicon-16.ico" sizes="16x16">
+    <link rel="icon" href="/favicon-32.ico" sizes="32x32">
 
-        .wrap {
-            position: relative;
-            height: 100%;
-            width: 100%;
-            background-image: url(https://bing.mcloc.cn/api);
-            background-size: cover;
-            background-position: center;
-        }
 
-        .wrap-son {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 1;
-            background: rgba(59, 59, 59, 0.3);
-        }
+    <title>辅助助手APP</title>
 
-        .jumbotron {
-            background: rgba(255, 255, 255, 0);
-            color: #f5f5f5;
-        }
 
-        .love {
-            color: #ffffff;
-            margin: 0 20px;
-            line-height: 1.3;
-            font-weight: 300;
-        }
 
-        .hans-container {
-            position: fixed;
-            bottom: 0px;
-            width: 100%;
-            height: 120px;
-            z-index: 1;
-        }
+    <link media="screen" type="text/css" rel="stylesheet" href="css/global.css">
+    <link media="screen" type="text/css" rel="stylesheet" href="css/theme.css">
+    <link rel="stylesheet" href="css/upgradedoc.css">
 
-        .timer b {
-            font-size: 100px;
-        }
+    <style type="text/css">
+        .p-pre{
+            padding-left: 36px;
 
-        #s {
-            font-size: 100px;
-        }
-
-        #updatalove,
-        #to_comments {
-            margin: 0 10px;
-        }
-
-        .copy {
-            position: absolute;
-            bottom: 0;
-            color: #ffffff;
-            font-size: 12px;
-        }
-
-        /* 评论 */
-        .comment {
-            margin-top: 50px;
-            margin-bottom: 100px;
         }
     </style>
+
 </head>
 
-<body>
-    <div class="wrap">
-        <div class="wrap-son">
-            <div class="container-fluid">
-                <div class="box">
-                    <div class="jumbotron text-center">
-                        <h1>我出生了</h1>
-                        <h3 class="timer">
-                            <div class="row">
-                                <b id="d"></b> 天 <b id="h"></b> 时 <b id="m"></b> 分
-                            </div>
-                            <div class="row">
-                                <b id="s"></b> 秒
-                            </div>
-                        </h3>
-                        <p>
-                            <a id="to_comments" class="btn btn-primary btn-lg" role="button">留个言吧</a>
-                        </p>
-                    </div>
-                </div>
+<body  >
+<div id="content">
+    <div id="main-content" class="wrap doc-content">
 
-                <div class="row">
-                    <h4 class="love text-center"><span class="love-son"></span></h4>
-                </div>
-
-                <div class="row">
-                    <p class="copy text-center col-xs-12 col-sm-12">京ICP备xxxxxxxx号 京公网安备xxxxxxxxxxxxxx号</p>
-                </div>
-
-                <div id="hans-bolang"></div>
-            </div>
+        <div class="letter">
+            <p>&nbsp;</p>
+            <p style="text-align: center"><a class="lnk" href="https://t.me/wlbbaa" target="_blank">辅助助手APP主频道</a></p>
+            <p style="text-align: center"><a class="lnk" href="https://t.me/sddzn" target="_blank">辅助助手APP交流群</a></p>
+            <p style="text-align: center"><a class="lnk" href="https://404nb.lanzoum.com/b00pxnq6j" target="_blank">辅助助手APP官方网盘</a></p>
+            <h1>助手履历</h1>
+            <p>2022-07-27：</p>
+            <p><span  class="p-pre"></span>CFM防封专区防止误碰，修改页面</p>
+            <p>2022-07-25：</p>
+            <p><span  class="p-pre"></span>更新CFM防封专区</p>
+            <p>2022-07-23：</p>
+            <p><span  class="p-pre"></span>助手放出去的第一天</p>
+            <p>2022-07-20：</p>
+            <p><span  class="p-pre"></span>把过验证脚本删掉，增加防骗路径和过验证脚本名字，我去，还真有垃圾来骂我，说我改了那路径他们怎么卖，无奈怼回去，World交流群我给他踢出去了。</p>
+            <p>2022-07-18：</p>
+            <p><span  class="p-pre"></span>World的QQ群主来找我把过验证不外放，哎我也没想到有人会去拿着过验证脚本这东西搞圈钱</p>
+            <p>2022-07-15：</p>
+            <p><span  class="p-pre"></span>NRLSP的出现又让我玩了五天游戏</p>
+            <p>2022-07-10：</p>
+            <p><span  class="p-pre"></span>继续研究CFM防封</p>
+            <p>2022-07-06：</p>
+            <p><span  class="p-pre"></span>我和我的朋友们就在一个几人组的一个QQ群内玩CFM</p>
+            <p>2022-07-06：</p>
+            <p><span  class="p-pre"></span>功能差不多了，就是辅助过验证和CFM防封</p>
+            <p>2022-06-28：</p>
+            <p><span  class="p-pre"></span>哎，玩游戏把这事忘了，哈哈，想起来就继续搞，自己用的一个工具</p>
+            <p>2022-06-18：</p>
+            <p><span  class="p-pre"></span>经历4天助手初成</p>
+            <p>2022-06-14：</p>
+            <p><span  class="p-pre"></span>二改搞机助手</p>
+       <!--     <p class="right">2022年7月22日</p> -->
+            
         </div>
+        <div class="envelope"></div>
+
+
     </div>
+</div>
 
-    <div class="container-fluid" id="comments">
-        <div class="row comment">
-            <div class="col-xs-10 col-sm-10 col-md-6 col-xs-push-1 col-sm-push-1 col-md-push-3">
-                <h2>留言：</h2>
-                <div id="vcomments"></div>
-            </div>
-        </div>
-    </div>
-
-    <script src="js/jquery-1.11.0.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src='js/Valine.min.js'></script><!-- Valine 评论系统 -->
-
-    <!-- 计时器 -->
-    <script>
-        function timer() {
-            var start = new Date(2017, 10, 05, 18, 16, 00); // 2017.10.05 18:16:00
-            var t = new Date() - start;
-            var h = ~~(t / 1000 / 60 / 60 % 24);
-            if (h < 10) {
-                h = "0" + h;
-            }
-            var m = ~~(t / 1000 / 60 % 60);
-            if (m < 10) {
-                m = "0" + m;
-            }
-
-            var s = ~~(t / 1000 % 60);
-            if (s < 10) {
-                s = "0" + s;
-            }
-            document.getElementById('d').innerHTML = ~~(t / 1000 / 60 / 60 / 24);
-            document.getElementById('h').innerHTML = h;
-            document.getElementById('m').innerHTML = m;
-            document.getElementById('s').innerHTML = s;
-        }
-        timer();
-        setInterval(timer, 1000);
-    </script>
-
-    <script>
-        var oComments = document.querySelector("#comments");
-        var oCommentsTop = Math.round(oComments.offsetTop);
-        //运动框架
-        function move() {
-            // 1. 关闭开启定时器;
-            clearInterval(timer);
-            var timer = setInterval(function () {
-                // 2. 计算速度;
-                var iNow = document.documentElement.scrollTop || document.body.scrollTop; //100
-                iNow = Math.round(iNow);
-                var speed = (oCommentsTop - iNow) / 10;
-                // 3. 速度取整;
-                if (speed > 0) {
-                    speed = Math.ceil(speed);
-                } else {
-                    speed = Math.floor(speed);
-                }
-                document.documentElement.scrollTop = document.body.scrollTop = iNow + speed + 1;
-                // 4. 终止条件;
-                if (iNow >= oCommentsTop) {
-                    clearInterval(timer);
-                }
-            }, 20)
-        }
-
-        to_comments.onclick = move;
-    </script>
-
-    <!-- 情话接口 -->
-    <script>
-        //进入页面时请求
-        $.ajax({
-            url: 'php/love.php',
-            type: "GET",
-            async: true,
-            data: "type=json",
-            dataType: "json",
-            success: function (loveJson) {
-                let love = loveJson["data"];
-                $(".love-son").append(love);
-            },
-            error: function (textStatus) {
-                console.log(JSON.stringify(textStatus));
-            }
-        });
-
-        //点击时请求
-        $(".love").click(function () {
-            $.ajax({
-                url: 'php/love.php',
-                type: "GET",
-                async: true,
-                data: "type=json",
-                dataType: "json",
-                success: function (loveJson) {
-                    let love = loveJson["data"];
-                    love = `<span class="love-son"">${love}</span>`;
-                    $(".love").children().replaceWith(love);
-                },
-                error: function (textStatus) {
-                    console.log(JSON.stringify(textStatus));
-                }
-            });
-        });
-
-        $("#updatalove").click(function () {
-            $.ajax({
-                url: 'php/love.php',
-                type: "GET",
-                async: true,
-                data: "type=json",
-                dataType: "json",
-                success: function (loveJson) {
-                    let love = loveJson["data"];
-                    love = `<span class="love-son"">${love}</span>`;
-                    $(".love").children().replaceWith(love);
-                },
-                error: function (textStatus) {
-                    console.log(JSON.stringify(textStatus));
-                }
-            });
-        });
-    </script>
-
-    <!-- Valine 评论系统； 由 LeanCloud 管理数据 -->
-    <script>
-        new Valine({
-            el: '#vcomments',
-            appId: 'V6l2CQp7rpDMfoMfppUB7MW9-gzGzoHsz',
-            appKey: 'yT85q1BlgwzBtjjmkCPbyESY'
-        })
-    </script>
-
-    <!-- 底部波浪 -->
-    <script src="php/wave.php"></script>
 </body>
-
 </html>
