--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <p style="text-align: center"><a class="lnk" href="https://404nb.lanzoum.com/b00pxnq6j" target="_blank">辅助助手APP官方网盘</a></p>
             <h1>助手履历</h1>
             <p>2022-07-27：</p>
-            <p><span  class="p-pre"></span>CFM防封专区防止误碰，修改页面</p>
+            <p><span  class="p-pre"></span>CFM防封专区防止误碰，修改页面。md5：a02279f5ed7f9cf81eb1f0debb4ef613</p>
             <p>2022-07-25：</p>
-            <p><span  class="p-pre"></span>更新CFM防封专区</p>
-            <p>2022-07-23：</p>
+            <p><span  class="p-pre"></span>更新CFM防封专区。md5：92cda14fb374d6a0e735f8c6521995a6</p>
+            <p>2022-07-21：</p>
             <p><span  class="p-pre"></span>助手放出去的第一天</p>
             <p>2022-07-20：</p>
             <p><span  class="p-pre"></span>把过验证脚本删掉，增加防骗路径和过验证脚本名字，我去，还真有垃圾来骂我，说我改了那路径他们怎么卖，无奈怼回去，World交流群我给他踢出去了。</p>
