--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
 
         <div class="letter">
             <p>&nbsp;</p>
-            <p style="text-align: center"><a class="lnk" href="https://t.me/wlbbaa" target="_blank">辅助助手APP主频道</a></p>
-            <p style="text-align: center"><a class="lnk" href="https://t.me/sddzn" target="_blank">辅助助手APP交流群</a></p>
-            <p style="text-align: center"><a class="lnk" href="https://404nb.lanzoum.com/b00pxnq6j" target="_blank">辅助助手APP官方网盘</a></p>
             <h1>助手履历</h1>
+            <p>2022-07-28：</p>
+            <p><span  class="p-pre"></span>CFM防封专区防止误碰，修改页面。md5：f766100455f315b521dc0c4249c1f441</p>
             <p>2022-07-27：</p>
             <p><span  class="p-pre"></span>CFM防封专区防止误碰，修改页面。md5：765b4553b5dec88f8209b237b6d4c6b2</p>
             <p>2022-07-25：</p>
