--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
         <div class="letter">
             <p>&nbsp;</p>
             <h1>助手履历</h1>
+            <p>2022-07-29：</p>
+            <p><span  class="p-pre"></span>增加：
+1:比奇堡过验证，在线获取卡密和验证内容
+2:World闪退问题
+提示：CFM防封全部是大厅开启
+CFM防追功能还没写，涉及安装包太大
+md5：24a80fd3bf1d1debdd51b0c25c7bbbdf</p>
             <p>2022-07-28：</p>
             <p><span  class="p-pre"></span>CFM防封专区防止误碰，修改页面。md5：f766100455f315b521dc0c4249c1f441</p>
             <p>2022-07-27：</p>
