--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
         <div class="letter">
             <p>&nbsp;</p>
             <h1>助手履历</h1>
+            <p>2022-08-01：</p>
+            <p><span  class="p-pre"></span>1:去除绑定MT管理器busybox命令，使用软件本身的busybox
+2:增加公告信息（辅助相关，雪花，world，CFM，小号网）0
+3:增加小号网功能
+4:下个版本有可能增加沙箱机制，来自scene
+md5：0d7f982ae1139973b0ac93f492685aa2</p>
             <p>2022-07-29：</p>
             <p><span  class="p-pre"></span>增加：
 1:比奇堡过验证，在线获取卡密和验证内容
