--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
         <div class="letter">
             <p>&nbsp;</p>
             <h1>助手履历</h1>
+            <p>2022-08-07：</p>
+            <p><span  class="p-pre"></span>2022-08-08
+
+1 CFM触发-游戏相关-CFM
+2 APP转位-游戏相关
+3 Shamiko黑白名单-设备修改
+4 助手自动卸载原因自找-辅助相关
+5 嗯嗯pubg过验证
+6 自动卸载残留解决
+工具箱md5
+87848adcf4258b05eecfcc4f53636d23
+清理修复.sh-移动到/data/lost+found/
+给予777权限执行
+md5
+c7c64d5cbc85a96c3db504de4a29a5ba</p>
             <p>2022-08-01：</p>
             <p><span  class="p-pre"></span>1:去除绑定MT管理器busybox命令，使用软件本身的busybox
 2:增加公告信息（辅助相关，雪花，world，CFM，小号网）0
