--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
         <div class="letter">
             <p>&nbsp;</p>
             <h1>助手履历</h1>
-            <p>2022-08-07：</p>
-            <p><span  class="p-pre"></span>2022-08-08
-
-1 CFM触发-游戏相关-CFM
+            <p>2022-08-08：</p>
+            <p><span  class="p-pre"></span>1 CFM触发-游戏相关-CFM
 2 APP转位-游戏相关
 3 Shamiko黑白名单-设备修改
 4 助手自动卸载原因自找-辅助相关
