--- a/s/index.html
+++ b/s/index.html
@@ -13,7 +13,7 @@
         <h2>关于我</h2>
         <p>我是[二坏]，欢迎访问我的个人秀！</p>
         <h3>自拍照片</h3>
-        <img src="ljw.jpg" alt="自拍照片">
+        <img src="1.jpg" alt="自拍照片">
     </section>
     <footer>
         <p>&copy; 2023 [刘二坏]. 保留所有权利。</p>
