--- a/s/index.html
+++ b/s/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>欢迎来到我的个人网页</h1>
+        <h1>欢迎来到我的个人秀</h1>
     </header>
     <section>
         <h2>关于我</h2>
