--- a/s/index.html
+++ b/s/index.html
@@ -4,18 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>我的个人秀</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header, section, footer {
+            padding: 10px;
+            box-sizing: border-box;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>欢迎来到我的个人秀</h1>
+        <h1 style="text-align: center;">欢迎来到我的个人秀</h1>
     </header>
     <section>
         <h2>关于我</h2>
-        <p>我是[二坏]，欢迎访问我的个人秀！</p>
-        <h3>自拍照片</h3>
+        <p style="text-align: center;">我是[二坏]，欢迎访问我的个人秀！</p>
+        <h3 style="text-align: center;">自拍照片</h3>
         <img src="1.jpg" alt="自拍照片">
     </section>
-    <footer>
+    <footer style="text-align: center;">
         <p>&copy; 2023 [刘二坏]. 保留所有权利。</p>
     </footer>
 </body>
