--- a/s/index.html
+++ b/s/index.html
@@ -20,6 +20,13 @@
             display: block;
             margin: 0 auto;
         }
+        img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
+
     </style>
 </head>
 <body>
