--- a/s/index.html
+++ b/s/index.html
@@ -31,11 +31,9 @@
 </head>
 <body>
     <header>
-        <h1 style="text-align: center;">欢迎来到我的个人秀</h1>
+        <h1 style="text-align: center;">我是[二坏]，欢迎访问我的个人秀！</h1>
     </header>
     <section>
-        <h2>关于我</h2>
-        <p style="text-align: center;">我是[二坏]，欢迎访问我的个人秀！</p>
         <h3 style="text-align: center;">自拍照片</h3>
         <img src="1.jpg" alt="自拍照片">
     </section>
