--- a/s/index.html
+++ b/s/index.html
@@ -34,7 +34,7 @@
         <h1 style="text-align: center;">我是[二坏]，欢迎访问我的个人秀！</h1>
     </header>
     <section>
-        <img src="1.jpg" alt="自拍照片">
+        <img src="1.jpg" alt="臭美照片">
     </section>
     <footer style="text-align: center;">
         <p>&copy; 2023 [刘二坏]. 保留所有权利。</p>
