--- a/s/index.html
+++ b/s/index.html
@@ -20,18 +20,12 @@
             display: block;
             margin: 0 auto;
         }
-        img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    margin: 0 auto;
-}
-
     </style>
 </head>
 <body>
     <header>
         <h1 style="text-align: center;">我是[二坏]，欢迎访问我的个人秀！</h1>
+        <h2 style="text-align: center; color: blue; cursor: pointer;" onclick="window.location.href='ljw.html'">二坏的由来</h2>
     </header>
     <section>
         <img src="1.jpg" alt="臭美照片">
