--- a/s/index.html
+++ b/s/index.html
@@ -25,7 +25,7 @@
 <body>
     <header>
         <h1 style="text-align: center;">我是[二坏]，欢迎访问我的个人秀！</h1>
-        <h2 style="text-align: center; color: blue; cursor: pointer;" onclick="window.location.href='ljw.html'">二坏的由来</h2>
+        <h2 style="text-align: center; color: blue; cursor: pointer;" onclick="window.location.href='https://2080.work/c/'">点我查看二坏的由来</h2>
     </header>
     <section>
         <img src="1.jpg" alt="臭美照片">
