--- a/c/index.html
+++ b/c/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>刘俊伟与“二坏”的外号</title>
+    <title>“二坏”的外号</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -31,12 +31,12 @@
 </head>
 <body>
     <header>
-        <h1 style="text-align: center;">刘俊伟与“二坏”的外号</h1>
+        <h1 style="text-align: center;">“二坏”的外号</h1>
     </header>
     <section>
-        <p>刘俊伟，一个在北方小镇长大的男孩，从小便背负着“二坏”的外号。这个称号源于他小时候调皮捣蛋的性格，尤其是他常常偷窥隔壁的翠花寡妇，这成为了镇上的笑柄。</p>
+        <p>一个在北方小镇长大的男孩，从小便背负着“二坏”的外号。这个称号源于他小时候调皮捣蛋的性格，尤其是他常常偷窥隔壁的翠花寡妇。</p>
         <img src="1.jpg" alt="刘俊伟">
-        <p>随着时间的推移，刘俊伟并没有变得更好，反而愈发沉迷于偷窥的行为。他变得孤僻、冷漠，对周围的人和事漠不关心。</p>
+        <p>随着时间的推移，刘俊伟并没有变得更好，反而愈发沉迷于偷窥的行为。</p>
         <p>然而，翠花寡妇并没有因为刘俊伟的行为而责怪他，反而试图用温暖和关爱来引导他。</p>
         <p>后面就不说了哈。</p>
     </section>
