--- a/s/index.html
+++ b/s/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的个人秀</title>
+    <title>刘二坏的个人秀</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -31,7 +31,7 @@
         <img src="1.jpg" alt="臭美照片">
     </section>
     <footer style="text-align: center;">
-        <p>&copy; 2023 [刘二坏]. 保留所有权利。</p>
+        <p>&copy; 2024 [刘二坏]. 保留所有权利。</p>
     </footer>
 </body>
 </html>
