--- a/c/index.html
+++ b/c/index.html
@@ -35,8 +35,8 @@
     </header>
     <section>
         <p>一个在北方小镇长大的男孩，从小便背负着“二坏”的外号。这个称号源于他小时候调皮捣蛋的性格，尤其是他常常偷窥隔壁的翠花寡妇。</p>
-        <p>随着时间的推移，刘俊伟并没有变得更好，反而愈发沉迷于偷窥的行为。</p>
-        <p>然而，翠花寡妇并没有因为刘俊伟的行为而责怪他，反而试图用温暖和关爱来引导他。</p>
+        <p>随着时间的推移，刘二坏并没有变得更好，反而愈发沉迷于偷窥的行为。</p>
+        <p>然而，翠花寡妇并没有因为刘二坏的行为而责怪他，反而试图用温暖和关爱来引导他。</p>
         <p>后面就不说了哈。</p>
         <img src="1.jpg" alt="刘俊伟">
     </section>
