--- a/index.html
+++ b/index.html
@@ -2,10 +2,66 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=https://renzheng.douyin.com/m/verified_account/landing?source=c0770mfe8meg74o4f0d0&disable_pop_gesture=1&hide_nav_bar=1&title=%E5%BC%80%E9%80%9A%E4%BC%81%E4%B8%9A%E5%8F%B7&hide_more=1&certification_type=company&disable_auto_expose=1&font_scale=1.0&show_more_button=0&status_font_dark=0&hide_loading=1&container_bgcolor=white&should_full_screen=1&status_bar_color=white&container_bg_color=white&show_loading=0">
+    <meta http-equiv="refresh" content="5;url=https://renzheng.douyin.com/m/verified_account/landing?source=c0770mfe8meg74o4f0d0&disable_pop_gesture=1&hide_nav_bar=1&title=%E5%BC%80%E9%80%9A%E4%BC%81%E4%B8%9A%E5%8F%B7&hide_more=1&certification_type=company&disable_auto_expose=1&font_scale=1.0&show_more_button=0&status_font_dark=0&hide_loading=1&container_bgcolor=white&should_full_screen=1&status_bar_color=white&container_bg_color=white&show_loading=0">
     <title>页面跳转</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            color: #333;
+            text-align: center;
+            padding: 50px;
+        }
+        .container {
+            max-width: 500px;
+            margin: 0 auto;
+            padding: 20px;
+            background: #fff;
+            border-radius: 10px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            font-size: 24px;
+            color: #444;
+        }
+        p {
+            font-size: 16px;
+            margin: 20px 0;
+        }
+        a {
+            text-decoration: none;
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            border-radius: 5px;
+            font-size: 16px;
+            transition: background-color 0.3s;
+        }
+        a:hover {
+            background-color: #0056b3;
+        }
+        .loading {
+            margin: 20px auto;
+            border: 4px solid #f3f3f3;
+            border-top: 4px solid #007bff;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            animation: spin 1s linear infinite;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+    </style>
 </head>
 <body>
-    如果没有自动跳转，请<a href="https://renzheng.douyin.com/m/verified_account/landing?source=c0770mfe8meg74o4f0d0&disable_pop_gesture=1&hide_nav_bar=1&title=%E5%BC%80%E9%80%9A%E4%BC%81%E4%B8%9A%E5%8F%B7&hide_more=1&certification_type=company&disable_auto_expose=1&font_scale=1.0&show_more_button=0&status_font_dark=0&hide_loading=1&container_bgcolor=white&should_full_screen=1&status_bar_color=white&container_bg_color=white&show_loading=0">点击这里</a>。
+    <div class="container">
+        <h1>页面正在跳转...</h1>
+        <div class="loading"></div>
+        <p>如果没有自动跳转，请点击下方按钮手动跳转。</p>
+        <a href="https://renzheng.douyin.com/m/verified_account/landing?source=c0770mfe8meg74o4f0d0&disable_pop_gesture=1&hide_nav_bar=1&title=%E5%BC%80%E9%80%9A%E4%BC%81%E4%B8%9A%E5%8F%B7&hide_more=1&certification_type=company&disable_auto_expose=1&font_scale=1.0&show_more_button=0&status_font_dark=0&hide_loading=1&container_bgcolor=white&should_full_screen=1&status_bar_color=white&container_bg_color=white&show_loading=0">点击这里</a>
+    </div>
 </body>
 </html>
